# NFC-Exploration

./: LICENSE  README.md
NFC-Exploration/: build.gradle
NFC-Exploration/app/src/main/res/values/: strings.xml
NFC-Exploration/app/src/main/res/xml/: nfc_filter.xml
NFC-Exploration/gradle/wrapper/: gradle-wrapper.properties
NFC_Exploration/NFC-Exploration/app/: build.gradle
NFC_Exploration/NFC-Exploration/app/src/main/: AndroidManifest.xml
NFC_Exploration/c_app_libfreefare/: CMakeCache.txt  CMakeLists.txt  Makefile
NFC_Exploration/c_app_libfreefare/src/: main.c
NFC_Exploration/c_app_libnfc/: .#lel.mfd  CMakeCache.txt  Makefile
NFC_Exploration/c_app_libnfc/include/: tools.h
NFC_Exploration/c_app_libnfc/src/: main.c
android_app/: README.md
android_app/Images/: home.psd
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/res/layout/: activity_main.xml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/scythex14/nfcreader_writer/Fragments/: Home.java  (+3 more)
app/src/main/res/layout/: activity_main.xml  custom_tab_icon.xml  fragment_emulator.xml  fragment_home.xml  fragment_reader.xml
app/src/main/res/values/: colors.xml  strings.xml
c_app_libfreefare/: CMakeCache.txt  Makefile  cmake_install.cmake  gigafit.mfd  nfc-profiling
c_app_libfreefare/include/: tools.h  tools.h~
c_app_libfreefare/src/: main.c
c_app_libnfc/: CMakeLists.txt  cmake_install.cmake  nfc-profiling
c_app_libnfc/src/: main.c  main.c~
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
